[package]
name = "axum_concurrency"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = {version = "1.0.149"}
dotenvy = "0.15.7"
